# AI-killer

./: .gitignore  .pre-commit-config.yaml  123.py  13132.html  AI-killer.postman_collection.json  CHANGELOG.md  FRONTEND_SETUP.md  README.md  VUE_INTEGRATION.md  add_user_manual.py  add_user_simple.py  grammer.py  package.json  plagiarism.py  pyproject.toml  quick-start.ps1  requirements.txt  start-backend.ps1  start-frontend.ps1  start-servers.ps1  test.db  test.py  yh.py
.github/workflows/: ci.yml
Back/: __init__.py  test.db
Back/Web/: __init__.py  alembic.ini  analysis_models.py  burstiness_analyzer.py  config.py  create_admin.py  crud.py  crud_new.py  database.py  dependencies.py  gemini_grammar.py  kobert_analyzer.py  logging_config.py  main.py  models.py  openai_client.py  perplexity_analyzer.py  sbert_analyzer.py  security.py  similarity_analyzer.py  test.db  test.db.backup  test.db.old  test.py
Back/Web/alembic/: env.py
Back/Web/tests/: __init__.py  conftest.py  test_analysis.py  test_kobert_analyzer.py  test_security.py
Front/: vue.config.js
Front/public/: index.html
Front/src/: App.vue  main.js
Front/src/components/: Sidebar.vue
JH-vue/: package-lock.json
JH-vue/Back/: .env  index.js  package-lock.json  package.json
JH-vue/test/: package-lock.json  package.json
ai/: package-lock.json  package.json
ai/src/: App.vue
back/: .env.example  README.md  app.py  requirements-dev.txt  run.ps1
back/tests/: test_app.py
front+back/vudongsan/: package-lock.json  package.json  postcss.cofig.js  vue.config.js
영환/: yh.py
(+35 files in other folders)
